# aws-ecommerce-platform

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
cdk/: CDK-BASICS-TUTORIAL.md  README.md  app.py  cdk.json
cdk/constructs/: ecs_microservice.py
cdk/stacks/: application_stack.py  config.py  data_stack.py  frontend_stack.py  identity_stack.py  messaging_stack.py  network_stack.py
docs/: openapi.yaml
dsa-roadmap/: README.md
dsa-roadmap/00-intuition/: README.md  daily-practice.md  delete-node.py  detect-cycle.py  dummy-nodes.md  graph-problems.md  linked-list-problems.md  linked-list-reverse.py  node-navigation.md  remove_nth_node.py  slow-fast-pointers.md  tree-problems.md  union-find-deep-dive.md
dsa-roadmap/01-welcome/: README.md
dsa-roadmap/02-coding-interview-strategy/: README.md
dsa-roadmap/03-big-o-notation/: README.md
dsa-roadmap/04-programming-fundamentals/: README.md
dsa-roadmap/05-sorting-algorithms/: README.md  bubble-sort.md  bucket-sort.md  counting-sort.md  heap-sort.md  (+6 more)
frontend/: .env.example  .gitkeep  Dockerfile  next.config.ts  package-lock.json  package.json
infra/: .gitkeep  backend.tf
nginx/: nginx.conf
scripts/: bootstrap-secrets.sh  init-localstack.sh  test-e2e.sh
services/common/: pyproject.toml  requirements.txt
services/common/app/: __init__.py  cache.py  db.py  main.py  settings.py
services/common/app/events/: publisher.py
services/common/tests/: test_health.py  test_publisher.py  test_settings.py
(+626 files in other folders)
