[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-common"
version = "0.1.0"
description = "Shared infrastructure for ecommerce microservices"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    "redis>=5.0.0",
    "opensearch-py>=2.4.0",
    "stripe>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
